src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: src/tui/app/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only (current)  Adam can read files   
  2. Full Access          Adam can edit files   
                                                
  Press enter to confirm or esc to go back
